stripe integration done, need make documentation
